[package]
name = "mcpl-core"
version = "0.1.0"
edition = "2021"
description = "MCPL v0.4 wire protocol types and async TCP transport"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
